--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,9 +2,9 @@
 @import "../../mixin.scss";
 footer {
   padding: 5rem 0 3rem;
-  background-color: $footer-color;
+  background-color: $primary-background-color;
 
-  color: #fff;
+  color: $primary-color-white;
   .footer_body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -15,12 +15,15 @@ footer {
       h1 {
         font-size: 1.5rem;
         padding-bottom: 1rem;
-        color: #00d8f5;
+        color: $primary-color-white;
+        text-transform: capitalize;
+        font-weight: 600;
+        letter-spacing: 0.5px;
       }
       p {
         font-size: 1rem;
         line-height: 2rem;
-        color: #cdf8fd;
+        color: #ddd;
       }
       ul {
         li {
@@ -28,7 +31,8 @@ footer {
           a {
             font-size: 1rem;
             line-height: 2rem;
-            color: #cdf8fd;
+            color: #ddd;
+            letter-spacing: 0.5px;
           }
         }
       }
@@ -39,7 +43,7 @@ footer {
           padding-right: 1rem;
           a {
             font-size: 1.2rem;
-            color: #00d8f5;
+            color: #ddd;
           }
         }
       }
@@ -59,8 +63,8 @@ footer {
 @media screen and (max-width: 600px) {
   footer {
     padding: 3rem 0 2rem;
-    background-color: $footer-color;
-    color: #fff;
+
+    color: $primary-color-white;
     .footer_body {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -72,12 +76,12 @@ footer {
         h1 {
           font-size: 1.1rem;
           padding-bottom: 0.6rem;
-          color: #00d8f5;
+          color: $primary-color-white;
         }
         p {
           font-size: 0.7rem;
           line-height: 1.2rem;
-          color: #cdf8fd;
+          color: $primary-color-white;
         }
         ul {
           li {
@@ -85,7 +89,7 @@ footer {
             a {
               font-size: 0.7rem;
               line-height: 1.2rem;
-              color: #cdf8fd;
+              color: $primary-color-white;
             }
           }
         }
@@ -96,7 +100,7 @@ footer {
             padding-right: 1rem;
             a {
               font-size: 1.2rem;
-              color: #00d8f5;
+              color: $primary-color-white;
             }
           }
         }
@@ -106,7 +110,7 @@ footer {
       text-align: center;
       margin-top: 1rem;
       padding-top: 2rem;
-      border-top: 1px solid rgba(255, 255, 255, 0.473);
+      border-top: 1px solid rgba(255, 255, 255, 0.644);
       h1 {
         font-size: 0.6rem;
         color: rgba(255, 255, 255, 0.39);
