--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   // font-family: "Poppins", sans-serif;
-  font-family: "lato", sans-serif;
+  font-family: "Kanit", sans-serif;
 }
 body {
   margin: 0;
@@ -34,7 +34,7 @@ a {
 
 .data_engineer_solution .body_layout .owl-next,
 .data_engineer_solution .body_layout .owl-prev {
-  background-color: rgba(70, 139, 204, 0.493) !important;
+  background-color: #000e9c9c !important;
   color: #222 !important;
   height: 60px !important;
   width: 60px !important;
@@ -45,7 +45,7 @@ a {
 
 .data_engineer_solution .body_layout .owl-next:hover,
 .data_engineer_solution .body_layout .owl-prev:hover {
-  background-color: rgb(70, 139, 204) !important;
+  background-color: $primary-background-color !important;
 }
 .data_engineer_solution .body_layout .owl-next i,
 .data_engineer_solution .body_layout .owl-prev i {
@@ -68,7 +68,7 @@ a {
 
 .cloud_service_solutions_mobile .body_layout .owl-next,
 .cloud_service_solutions_mobile .body_layout .owl-prev {
-  background-color: rgba(70, 139, 204, 0.493) !important;
+  background-color: #000e9c9c !important;
   color: #222 !important;
   height: 30px !important;
   width: 30px !important;
@@ -79,7 +79,7 @@ a {
 
 .cloud_service_solutions_mobile .body_layout .owl-next:hover,
 .cloud_service_solutions_mobile .body_layout .owl-prev:hover {
-  background-color: rgb(70, 139, 204) !important;
+  background-color: $primary-background-color !important;
 }
 .cloud_service_solutions_mobile .body_layout .owl-next i,
 .cloud_service_solutions_mobile .body_layout .owl-prev i {
@@ -103,7 +103,7 @@ a {
 @media screen and (max-width: 500px) {
   .data_engineer_solution .body_layout .owl-next,
   .data_engineer_solution .body_layout .owl-prev {
-    background-color: rgba(70, 139, 204, 0.493) !important;
+    background-color: #000e9c9c !important;
     color: #222 !important;
     height: 30px !important;
     width: 30px !important;
@@ -114,7 +114,7 @@ a {
 
   .data_engineer_solution .body_layout .owl-next:hover,
   .data_engineer_solution .body_layout .owl-prev:hover {
-    background-color: rgb(70, 139, 204) !important;
+    background-color: $primary-background-color !important;
   }
   .data_engineer_solution .body_layout .owl-next i,
   .data_engineer_solution .body_layout .owl-prev i {
